--- a/styles-css/style.css
+++ b/styles-css/style.css
@@ -1,8 +1,15 @@
+
+html{
+    background-image: url("https://c1.wallpaperflare.com/preview/942/721/170/natural-night-sky-stars.jpg") ;
+    background-size: cover;
+    height: 100%;
+    /* overflow: hidden; */
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+}
+
 body{
     font-size: 200%;
-    background-color: white;
-    /* background-image: url("/images/Screenshot\ 2021-04-19\ 092856.png");
-     */
     background-repeat: no-repeat;
     background-attachment:fixed;
     height: 600vh;
@@ -13,10 +20,10 @@ body{
 div.logo{
     padding-left: 9px;
     padding-right: 9px;
-    display: flex;
+    display: inline-block;
     background-color: rgb(247, 106, 41);
     position: fixed;
-    top: 0px;
+    top: 60px;
     left: 0px;
 }
 div.navbar{
@@ -26,7 +33,8 @@ div.navbar{
     /* border: 3px solid chartreuse; */
     display:flex;
     z-index: 999;
-    flex-direction: row-reverse;
+    justify-content: center;
+    flex-wrap: wrap;
     /* position: fixed;
     top: 0px;
     right: 0px; */
@@ -34,7 +42,9 @@ div.navbar{
 
 div.navbar ul{
     display: flex;
-    flex-direction: row-reverse;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* flex-direction: row-reverse; */
 }
 div.navbar li{
     margin-left: 17px;
@@ -46,7 +56,11 @@ div.navbar li{
 a{
     text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(49, 49, 49);
+    color: rgb(179, 179, 179);
+}
+
+a:hover{
+    color: rgb(82, 81, 81);
 }
 
 /* section.sub
@@ -70,25 +84,21 @@ div.content{
     color: rgb(0, 0, 0);
     display: inline-block;
     position:absolute;
-    top: 200px;
+    top: 300px;
     left: 303px;
     width: 700px;
 }
-div.content ul li{
-    color: rgb(48, 47, 47);
-    font-size: 75%;
-    list-style-type: disc;
+.myimg{
+    height: 200px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+
+    
+    margin: auto;
 }
 
 div.content h2{
     font-size: 300%;
     color: rgb(248, 11, 11) ;
-}
-
-div.content p{
-    color: rgb(0, 0, 0) ;
-}
-
-div.content h3{
-    color: rgb(61, 104, 196) ;
 }
