--- a/styles-css/style.css
+++ b/styles-css/style.css
@@ -20,7 +20,7 @@ div.logo{
     position: fixed;
     top: 60px;
     left: 0px;
-    /* z-index: 100; */
+    z-index: 100;
 }
 nav.navbar{
     /* background-color: rgb(12, 0, 39); */
@@ -377,7 +377,7 @@ div.content h2{
 #projects{
     background-image: url("https://image.freepik.com/free-vector/halftone-background-with-circles_23-2148907689.jpg") ;
     background-size: cover;
-    height: 100vh;
+    height: 60vh;
     /* overflow: hidden; */
     background-repeat: no-repeat;
     background-attachment:fixed;
@@ -386,4 +386,55 @@ div.content h2{
 
 #projects p{
     margin : 0px;
+}
+
+#projects h1{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 30px;
+    margin-top: 0px;
+    color: rgb(212, 40, 40);
+}
+
+.myproj{
+    background-color: rgb(51, 51, 51);
+    width: 200px;
+    height: 200px;
+    margin: auto;
+    position: relative;
+    top: 70px;
+
+
+}
+
+.myproj p{
+    color: blanchedalmond;
+    position: relative;
+    top: 50px;
+    text-align: center;
+}
+
+#contact{
+    background-image: url("https://image.freepik.com/free-vector/halftone-background-with-circles_23-2148907689.jpg") ;
+    background-size: cover;
+    height: 30vh;
+    /* overflow: hidden; */
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+    box-sizing: border-box;
+}
+
+#contact p{
+    margin:0px;
+}
+
+#contact h1{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 30px;
+    margin-top: 0px;
+    color: rgb(212, 40, 40);
+    text-align: center;
 }
